--- a/src/Views/Layout/Loader/loader.css
+++ b/src/Views/Layout/Loader/loader.css
@@ -1,55 +1,41 @@
-/* From Uiverse.io by satyamchaudharydev */
-.loading {
-  --speed-of-animation: 0.9s;
-  --gap: 6px;
-  --first-color: #4c86f9;
-  --second-color: #49a84c;
-  --third-color: #f6bb02;
-  --fourth-color: #f6bb02;
-  --fifth-color: #2196f3;
+/* From Uiverse.io by csozidev */
+/* SVG loader made by: csozi | Website: www.csozi.hu*/
+
+/*You dont need this "p" style*/
+.text {
+  font-weight: bolder;
+  font-size: 17px;
+  color: black;
+  position: absolute;
+  translate: -50% 0px;
+  top: 20px;
+  left: 50%;
+  text-align: center;
+}
+
+.loader {
+  overflow: visible;
+  height: fit-content;
+  width: fit-content;
+  padding: 20px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100px;
-  gap: 6px;
-  height: 100px;
 }
 
-.loading span {
-  width: 4px;
-  height: 50px;
-  background: var(--first-color);
-  animation: scale var(--speed-of-animation) ease-in-out infinite;
+.logo {
+  fill: none;
+  stroke-dasharray: 20px;
+  /*<-- Play with this number until it look cool */
+  stroke: black;
+  animation: load 15s infinite linear;
 }
 
-.loading span:nth-child(2) {
-  background: var(--second-color);
-  animation-delay: -0.8s;
-}
-
-.loading span:nth-child(3) {
-  background: var(--third-color);
-  animation-delay: -0.7s;
-}
-
-.loading span:nth-child(4) {
-  background: var(--fourth-color);
-  animation-delay: -0.6s;
-}
-
-.loading span:nth-child(5) {
-  background: var(--fifth-color);
-  animation-delay: -0.5s;
-}
-
-@keyframes scale {
-  0%,
-  40%,
-  100% {
-    transform: scaleY(0.05);
+@keyframes load {
+  0% {
+    stroke-dashoffset: 0px;
   }
 
-  20% {
-    transform: scaleY(1);
+  100% {
+    stroke-dashoffset: 200px;
+    /* <-- This number should always be 10 times the number up there*/
   }
 }
